--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
-        <label for="fname">Name</label><br><br>
-        <input type="text" id="fname" name="first name"><br><br>
-        <label for="fname">Email</label><br><br>
-        <input type="email" id="email" name="email address"><br><br>
-        <label for="fname">Contact Number</label><br><br>
-        <input type="number" id="fname" name="contact number"><br><br>
-        <button type="submit">Submit</button>
-    </form>
+    <h1>Office Schedule</h1>
+    <table bgcolor="black" width="700">
+        <tr bgcolor="grey">
+            <th>Sunday</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+        </tr>
+        <tr bgcolor="lightgrey" align="center">
+            <td>Closed</td>
+            <td> 8am - 5pm</td>
+            <td> 8am - 5pm</td>
+            <td> 8am - 5pm</td>
+            <td> 8am - 5pm</td>
+            <td> 8am - 5pm</td>
+            <td>Closed</td>
+        </tr>
+    </table>
 </body>
 </html>
